fix spacing and buttons: reviewAppointments modal

--- a/frontend/src/components/ReviewAppointments/ReviewAppointments.scss
+++ b/frontend/src/components/ReviewAppointments/ReviewAppointments.scss
@@ -1,10 +1,8 @@
 .table-container {
   flex: column;
-  justify-content: space-evenly;
-  max-height: 60vh;
-  max-width: 44vw;
+  justify-content: flex-start;
   overflow-y: auto;
-  margin-bottom: 0;
+  margin: 0;
   /* Reduce empty space under the table */
 }
 
