--- a/frontend/src/styles/_mixins.scss
+++ b/frontend/src/styles/_mixins.scss
@@ -3,6 +3,19 @@
   color: black;
 }
 
+@mixin on-theme-button {
+  @include accent-colours;
+  border: none;
+  border-radius: 5px;
+  font-size: 14px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+@mixin on-theme-button-hover {
+  @include on-theme-button;
+  color: black;
+}
 @mixin accent-colours {
   background-color: darkgoldenrod;
   color: #fff;
